--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -93,10 +93,9 @@
   "errorLocationNotCorrect": "شما در یک موقعیت مکانی تعریف شده نیستید. اگر در موقعیت مکانی هستید، لطفاً موقعیت مکانی خود را مجدداً راه اندازی کنید.",
   "stopTask": "توقف وظیفه",
   "remove": "حذف",
-  "notification": "اعلان",
   "explain": "توضیح",
   "send": "ارسال",
-  "errorSendNotif": "لطفا پروژه خود را انتخاب و توضیحات لازم را وارد نمایید.",
+  "errorSendMsg": "لطفا کاربر و پروژه خود را انتخاب و توضیحات لازم را وارد نمایید.",
   "sendMessage": "ارسال پیام به کاربر",
   "connectionFailed": "اتصال به سیستم قطع می باشد. لطفاً اینترنت خود را بررسی کنید.",
   "enterPhoneNumberOrPassword": "لطفا شماره تلفن یا رمز خود را وارد نمایید.",
@@ -116,5 +115,6 @@
   "entryAndExit": "ورود و خروج",
   "locationNameExist": "این نام موقعیت مکانی در سیستم وجود دارد. لطفا نام دیگری انتخاب نمایید.",
   "registeredLocations": "مکان های ثبت شده",
-  "notExistReport": "در این تاریخ گزارشی یافت نشد."
+  "notExistReport": "در این تاریخ گزارشی یافت نشد.",
+  "all": "همه"
 }
