--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -41,13 +41,13 @@
   "summaryOfTheMonthlyReport": "خلاصه گزارش ماهانه ",
   "Farvardin": "فروردین",
   "Ordibehesht": "اردیبهشت",
-  "Khordad": "خرداد",
+  "Khordaad": "خرداد",
   "Tir": "تیر",
-  "Mordad": "مرداد",
+  "Amordaad": "مرداد",
   "Shahrivar": "شهریور",
   "Mehr": "مهر",
-  "Aban": "آبان",
-  "Azar": "آذر",
+  "Aabaan": "آبان",
+  "Aazar": "آذر",
   "Dey": "دی",
   "Bahman": "بهمن",
   "Esfand": "اسفند",
@@ -145,5 +145,12 @@
   "to": "تا",
   "dateTimeNotAcceptable": "تاریخ یا زمان غیر قابل قبول می باشد.",
   "errorEndDateSmaller": "این تاریخ کوچکتر از تاریخ شروع است.",
-  "errorEndTimeSmaller": "این زمان کوچکتر از زمان شروع است."
+  "errorEndTimeSmaller": "این زمان کوچکتر از زمان شروع است.",
+  "task": "وظیفه",
+  "stoppedByAdmin": "توسط مدیر متوقف شد.",
+  "exitByAdmin": "ثبت خروج سیستمی توسط مدیر",
+  "forceExit": "ثبت خروج سیستمی",
+  "privacyPolicy": "سیاست حفظ حریم خصوصی",
+  "privacyPolicyDescription": "اسمارت‌ورک برای حریم خصوصی شما اهمیت زیادی قائل است. ما متعهد به حفاظت از اطلاعات شخصی شما که در اختیار ما می‌گذارید هستیم. ما اطلاعات شخصی شما را در چارچوب قانون و تنها با هدف ارائه خدمات موثر و مبتکرانه، پیشگیری از کلاهبرداری و مسائل امنیتی پردازش می‌کنیم؛ مگر این‌که با انجام این کار، منافع، حقوق اساسی و آزادی‌های شما به خطر بیفتد. \n کدام اطلاعات توسط اسمارت‌ورک جمع آوری می‌شوند؟ \nاطلاعات پایه مانند نام و نام خانوادگی ، شماره تلفن و ایمیل که از این اطلاعات برای ثبت کاربر استفاده می شوند. ساعات تردد ، و تعداد دفعات ورود و خروج و میزان کار کرد شما بر روی هر پروژه را بر روی سرورهای خود ذخیره می‌کنیم تا بتوانید همیشه، از طریق هر دستگاهی و بدون نیاز به نسخه پشتیبان ثالث به آنها دسترسی داشته باشید. در این فرایند، ما تمام تلاش خود را برای حفظ اطلاعات شخصی شما به کار می‌گیریم. سایر اطلاعات با هدف ارائه بهینه خدمات، ما اطلاعاتی مانند ، موقیت مکانی ذخیره شده توسط صاحبان کسب و کار برای تردد اعضا از آن استفاده میشود.\n ما این سیاست‌ها را در بازه‌های زمانی گوناگون، ارزیابی و به روزرسانی می‌کنیم. تغییرات این سیاست‌ها هنگامی که ما نسخه جدید آن را در سایت قرار دهیم و می‌توانید برای مشاهده آخرین تغییرات سیاست‌های حریم خصوصی به سایت اسمارت ورک مراجعه کنید. تغییرات اساسی در این راهبرد، از طریق اپلیکیشن اسمارت ورک اطلاع‌رسانی خواهد شد.\n مسائل و مشکلات سوالات و نظرات خود را در باره تغییر سیاست های حریم خصوصی از طریق ایمیل info@medsaco.com با ما در میان بگذارید.",
+  "acceptPrivacyPolicy": " اسمارت ورک را خوانده ام و با شرایط و ضوابط موافقم."
 }
