--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -38,7 +38,7 @@
   "summaryStatus": "Summary Status",
   "moreDetails": "More Details",
   "dailyReport": "Daily Report",
-  "summaryOfTheMonthlyReport": "Summary of the monthly report:",
+  "summaryOfTheMonthlyReport": "Summary of the monthly report",
   "Farvardin": "Farvardin",
   "Ordibehesht": "Ordibehesht",
   "Khordaad": "Khordad",
@@ -152,5 +152,8 @@
   "forceExit": "force exit",
   "privacyPolicy": "Privacy Policy",
   "privacyPolicyDescription": "Smart work cares about your privacy. We are committed to protecting your personal information that you provide to us. We process your personal information within the framework of the law and only for the purpose of providing effective and innovative services, fraud prevention and security issues; Unless by doing so, your interests, fundamental rights and freedoms will be jeopardized. \n What information is collected by Smart Work? Basic information such as first and last name, phone number and email, which are used to register the user. We store the hours of traffic, the number of times you enter and exit, and the amount of work you did on each project on our servers so that you can always access them, through any device, without the need for a third-party backup. In this process, we make every effort to protect your personal information. Other information with the aim of providing optimal services, we use information such as location stored by business owners for members' traffic.\n We evaluate and update these policies at various time intervals. Changes to these policies will be made when we post the new version on the site and you can visit the Smart Work site to view the latest privacy policy changes. Basic changes in this strategy will be notified through the Smart Work application. Share your issues and problems, questions and comments about the change of privacy policies with us via email info@medsaco.com.",
-  "acceptPrivacyPolicy": "I've read and agree to Smart Work's "
+  "acceptPrivacyPolicy": "I've read and agree to Smart Work's ",
+  "noProject": "There are no projects for this user.",
+  "language": "Language",
+  "languageDescription": "Choose your language."
 }
