handle bug and clean code

--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -155,5 +155,7 @@
   "acceptPrivacyPolicy": " اسمارت ورک را خوانده ام و با شرایط و ضوابط موافقم.",
   "noProject": "برای این کاربر پروژه ای وجود ندارد.",
   "language": "زبان",
-  "languageDescription": "زبان خود را انتخاب کنید."
+  "languageDescription": "زبان خود را انتخاب کنید.",
+  "autoExit": "خروج اتوماتیک",
+  "autoExitDescription": "در صورت خروج کاربر از محدوده مکانی به صورت خودکار خروج ثبت می شود."
 }
