--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -155,5 +155,7 @@
   "acceptPrivacyPolicy": "I've read and agree to Smart Work's ",
   "noProject": "There are no projects for this user.",
   "language": "Language",
-  "languageDescription": "Choose your language."
+  "languageDescription": "Choose your language.",
+  "autoExit": "Auto Exit",
+  "autoExitDescription": "When the user exits the location, they are automatically logged out."
 }
