handel bug and clean code

--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -65,7 +65,6 @@
   "exportExcel": "Export Excel",
   "selectDateUserProject": "Please select the desired date , user or project.",
   "excel": "Excel",
-  "removeFilter": "remove filter",
   "export": "Export",
   "date": "Date",
   "projects": "Projects",
@@ -146,6 +145,7 @@
   "dateTimeNotAcceptable": "Date or Time is not acceptable.",
   "errorEndDateSmaller": "This date is smaller than the start date.",
   "errorEndTimeSmaller": "This time is smaller than the start time.",
+  "errorTimeUnacceptable": "The time is unacceptable.",
   "task": "Task",
   "stoppedByAdmin": "was stopped by Admin.",
   "exitByAdmin": "Force exit by Admin.",
