--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -63,9 +63,8 @@
   "no": "خیر",
   "yes": "بله",
   "exportExcel": "دریافت فایل اکسل",
-  "selectDateUserProject": ".لطفا تاریخ، کاربر یا پروژه مورد نظر را انتخاب کنید",
+  "selectDateUserProject": "لطفا تاریخ، کاربر یا پروژه مورد نظر را انتخاب کنید.",
   "excel": "اکسل",
-  "removeFilter": "حذف فیلتر",
   "export": "دریافت اکسل",
   "date": "تاریخ",
   "projects": "پروژه ها",
@@ -146,6 +145,7 @@
   "dateTimeNotAcceptable": "تاریخ یا زمان غیر قابل قبول می باشد.",
   "errorEndDateSmaller": "این تاریخ کوچکتر از تاریخ شروع است.",
   "errorEndTimeSmaller": "این زمان کوچکتر از زمان شروع است.",
+  "errorTimeUnacceptable": "زمان غیر قابل قبول می باشد.",
   "task": "وظیفه",
   "stoppedByAdmin": "توسط مدیر متوقف شد.",
   "exitByAdmin": "ثبت خروج سیستمی توسط مدیر",
