add notification in web

--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -168,5 +168,7 @@
   "newProjectName": "New project name",
   "todayHoursAverage": "today hours average",
   "averageHourOfTheLastMonth": "The average hour of the last month",
-  "noUserWorkingProject": "There is no user working on this project."
+  "noUserWorkingProject": "There is no user working on this project.",
+  "RequestAccepted": "Your request accepted.",
+  "RequestRejected": "Your request rejected."
 }
