add shift work in the boss

--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -170,5 +170,29 @@
   "averageHourOfTheLastMonth": "The average hour of the last month",
   "noUserWorkingProject": "There is no user working on this project.",
   "RequestAccepted": "Your request accepted.",
-  "RequestRejected": "Your request rejected."
+  "RequestRejected": "Your request rejected.",
+  "shiftWork": "Shift Work",
+  "addShift": "Add Shift",
+  "shiftName": "Shift Name",
+  "overtimeOnHolidays": "Overtime on holidays",
+  "Saturday": "Saturday",
+  "Sunday": "Sunday",
+  "Monday": "Monday",
+  "Tuesday": "Tuesday",
+  "Wednesday": "Wednesday",
+  "Thursday": "Thursday",
+  "Friday": "Friday",
+  "holiday": "holiday",
+  "remote": "Remote",
+  "shiftLength": "Shift length",
+  "allowedDelay": "Allowed delay",
+  "delayCompensation": "Delay compensation",
+  "isThereOvertime": "Is there overtime?",
+  "overtimeBeforeStartingWork": "Overtime before starting work",
+  "advanced": "Advanced",
+  "save": "Save",
+  "removeShift": "Remove Shift",
+  "removeShiftDescription": "Are you sure you want to delete your shift?",
+  "shiftNameExist": "This shift name exists in the system. Please choose another name.",
+  "noWorkShift": "There is no work shift."
 }
