--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -170,5 +170,29 @@
   "averageHourOfTheLastMonth": "میانگین ساعت یک ماه اخیر",
   "noUserWorkingProject": "کاربری بر روی این پروژه کار نمی کند.",
   "RequestAccepted": "درخواست شما پذیرفته شد.",
-  "RequestRejected": "درخواست شما رد شد."
+  "RequestRejected": "درخواست شما رد شد.",
+  "shiftWork": "شیفت کاری",
+  "addShift": "افزودن شیفت",
+  "shiftName": "نام شیفت",
+  "overtimeOnHolidays": "اضافه کار در روز تعطیل",
+  "Saturday": "شنبه",
+  "Sunday": "یکشنبه",
+  "Monday": "دوشنبه",
+  "Tuesday": "سه شنبه",
+  "Wednesday": "چهارشنبه",
+  "Thursday": "پنجشنبه",
+  "Friday": "جمعه",
+  "holiday": "تعطیل",
+  "remote": "دورکاری",
+  "shiftLength": "طول شیفت",
+  "allowedDelay": "تاخیر مجاز",
+  "delayCompensation": "جبران تاخیر",
+  "isThereOvertime": "اضافه کار دارد؟",
+  "overtimeBeforeStartingWork": "اضافه کار قبل از شروع کار",
+  "advanced": "تنظیمات بیشتر",
+  "save": "ذخیره",
+  "removeShift": "حذف شیفت",
+  "removeShiftDescription": "آیا از حذف شیفت کاری خود مطمئن هستید؟",
+  "shiftNameExist": "این نام شیفت در سیستم وجود دارد. لطفا نام دیگری انتخاب نمایید.",
+  "noWorkShift": "شیفت کاری وجود ندارد."
 }
