add shift to user

--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -194,5 +194,7 @@
   "removeShift": "Remove Shift",
   "removeShiftDescription": "Are you sure you want to delete your shift?",
   "shiftNameExist": "This shift name exists in the system. Please choose another name.",
-  "noWorkShift": "There is no work shift."
+  "noWorkShift": "There is no work shift.",
+  "addShiftToUser": "Add shift to user",
+  "noShift": "No Shift"
 }
