--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -194,5 +194,7 @@
   "removeShift": "حذف شیفت",
   "removeShiftDescription": "آیا از حذف شیفت کاری خود مطمئن هستید؟",
   "shiftNameExist": "این نام شیفت در سیستم وجود دارد. لطفا نام دیگری انتخاب نمایید.",
-  "noWorkShift": "شیفت کاری وجود ندارد."
+  "noWorkShift": "شیفت کاری وجود ندارد.",
+  "addShiftToUser": "افزودن شیفت به کاربر",
+  "noShift": "بدون شیفت"
 }
