--- a/src/features/i18n/fa.json
+++ b/src/features/i18n/fa.json
@@ -196,5 +196,7 @@
   "shiftNameExist": "این نام شیفت در سیستم وجود دارد. لطفا نام دیگری انتخاب نمایید.",
   "noWorkShift": "شیفت کاری وجود ندارد.",
   "addShiftToUser": "افزودن شیفت به کاربر",
-  "noShift": "بدون شیفت"
+  "noShift": "بدون شیفت",
+  "existMoreStartError": "بیش از یک شروع برای این پروژه وجود دارد.",
+  "existMoreEntryError": "بیش از یک ورود وجود دارد."
 }
