--- a/src/features/i18n/en.json
+++ b/src/features/i18n/en.json
@@ -221,5 +221,9 @@
   "accessAdmin": "Access Admin",
   "accessAdminDescription": "View, edit and delete the list of members, projects, shifts, etc.",
   "admin": "Admin",
-  "boss": "Boss"
+  "boss": "Boss",
+  "noImage": "There is no image.",
+  "personalRequest": "Personal Request",
+  "userRequest": "User Request",
+  "search": "Search"
 }
